testing/tests/ui/typo_in_keyword.stderr
error: failed to parse template source
 --> <source attribute>:1:27
  |
       1 | {%for i in 1..=10%}{{i}}{%endfo%}
         |                           ^ close to this token
         |
 --> tests/ui/typo_in_keyword.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
